--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,16 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">Contact</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Search Your Brewery
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Localization</a></li>
+          <li><a href="#">Phone</a></li>
+          <li><a href="#">Type</a></li>
+        </ul>
+      </li>
     </ul>
   </div>
 </nav>
