--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
             <a class="navbar-brand" href="">Brewery Site</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="#">Contact</a></li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown">Search Your Brewery
