--- a/templates/search.html
+++ b/templates/search.html
@@ -8,17 +8,25 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-    {% include "navbar.html" %}
+{% include "navbar.html" %}
 <body>
-<p>Input Your search below:</p>
-<b></b>
 
-<form action="/">
-  <div class="form-group">
-    <label>Brewery to search:</label>
-    <input class="form-control" id="brewery">
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+<form action="{{ url_for('search') }}"
+      method="post"
+      id="searchForm"
+      name="searchBrewery">
+    <div class="form-group">
+      <textarea
+              class="form-control"
+              id="message"
+              name="message"
+              placeholder="Enter your brewery to search"
+              required
+              style="height: 12rem"
+      ></textarea>
+        <label for="message">Brewery to search</label>
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
 </form>
 </body>
 </html>
