--- a/templates/search.html
+++ b/templates/search.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Search Your Brewery</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+{% extends "base.html" %}
 {% include "navbar.html" %}
-<body>
-
+{% block content %}
 <form action="{{ url_for('search') }}"
       method="post"
       id="searchForm"
@@ -28,5 +18,4 @@
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
-</body>
-</html>
+{% endblock %}
