--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,10 +10,10 @@
                 <a class="dropdown-toggle" data-toggle="dropdown">Search Your Brewery
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                    <!-- Will make Search, where 5 random breweries will go. From there will be "Add to favourite"
+                    or "Contact this brewery"-->
                     <li><a href="{{ url_for('search') }}">Search</a></li>
-                    <li><a href="#">Localization</a></li>
-                    <li><a href="#">Phone</a></li>
-                    <li><a href="#">Type</a></li>
+                    <li><a href="#">Favourite Breweries</a></li>
                 </ul>
             </li>
         </ul>
