Made favourites subpage

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
                     <!-- Will make Search, where 5 random breweries will go. From there will be "Add to favourite"
                     or "Contact this brewery"-->
                     <li><a href="{{ url_for('search') }}">Search</a></li>
-                    <li><a href="#">Favourite Breweries</a></li>
+                    <li><a href="{{ url_for('favourites') }}">Favourite Breweries</a></li>
                 </ul>
             </li>
         </ul>
