--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Favourite Breweries</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% include "navbar.html" %}
+{% block content %}
 <p>This is Your fav</p>
-</body>
-</html>
+{% endblock %}
