--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 {% for brewery in breweries: %}
-    <h1>{{brewery.name}}</h1>
+    <h1>Name: {{brewery.name}}</h1>
     <p>City: {{brewery.city}}</p>
     <div>
         <form action="{{ url_for('favourites') }}"
