--- a/templates/search.html
+++ b/templates/search.html
@@ -19,6 +19,6 @@
       ></textarea>
         <label for="message">Brewery to search</label>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-default">Search</button>
 </form>
 {% endblock %}
