--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,10 @@
-<nav class="navbar fixed-top navbar-inverse">
+<nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="">Brewery Site</a>
+            <a class="navbar-brand" href="{{ url_for('home') }}">Brewery Site</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="nav-item nav-link" href="#">Contact</a></li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown">Search Your Brewery
                     <span class="caret"></span></a>
@@ -14,6 +13,9 @@
                     <li><a href="{{ url_for('favourites') }}">Favourite Breweries</a></li>
                 </ul>
             </li>
+            <li><a class="nav-item nav-link" href="{{ url_for('register') }}">Sign Up</a></li>
+            <li><a class="nav-item nav-link" href="{{ url_for('login') }}">Sign In</a></li>
+
         </ul>
     </div>
 </nav>
